close #375 write description for forget wordpress event

--- a/_includes/components/footer.html
+++ b/_includes/components/footer.html
@@ -19,9 +19,10 @@
     {% endcapture %}
 
     <footer>
-      <img class="footer-logo" src="/images/logos/prolike-logo.png" alt="prolike footer logo" draggable="false">
-      <div class="footer-items">
-        <div class="row">
+      
+    
+        <div class="footer-row">
+          <img class="footer-logo" src="/images/logos/prolike-logo.png" alt="prolike footer logo" draggable="false">
           <div class="footer-list">
             <h1>Navigation</h1>
             <a href="/#home" data-proofer-ignore>Prolike</a>
@@ -62,7 +63,7 @@
             <p>3450 Allerød</p>
           </div>
         </div>
-      </div>
+      
       <div class="bottom-bar">
         <span>© 2019 Prolike</span>
         <span>
