--- a/_sass/miscellaneous/_event.scss
+++ b/_sass/miscellaneous/_event.scss
@@ -1,7 +1,7 @@
 .event-container {
     height: auto;
     width: 100%;
-    padding: 16.5vh 30vh 10vh 30vh;
+    padding: 16.5vh 40vh 10vh 40vh;
 
 .wrapper {
     display: grid;
@@ -20,7 +20,7 @@
     }
 
     h2 {
-        font-size: 3.5vh;
+        font-size: 4vh;
         line-height: 5.5vh;
         color: $black;
         padding: 0 0 .5vh 0;
@@ -30,10 +30,9 @@
         transition: .15s all ease-in-out;
     }
     h3 {
-        font-size: 2vh;
+        font-size: 2.5vh;
         padding: 0;
-        margin: 10px 0 0 0;
-        color: $black;
+        margin: 1.5vh 0 0 0;
         text-transform: uppercase;
         font-weight: 600;
         color: $prolikeyellow;
@@ -41,8 +40,35 @@
         transition: .15s all ease-in-out;
     }
 
+   
+    
+        h4 {
+            font-size: 2vh;
+            opacity: 0.5;
+            padding: 0;
+            margin: 1.5vh 0 1.5vh 0;
+            text-transform: uppercase;
+            font-weight: 600;
+            font-family: 'Oswald', sans-serif;
+            transition: .15s all ease-in-out;
+        }
+    
+    
+
+    
+
     .event-frame {
         padding: 0 !important;
+    }
+
+    a {
+        color: black;
+        font-weight: 500;
+        text-transform: uppercase;
+    }
+    a:hover {
+        color: $prolikeyellow;
+        text-decoration: none;
     }
 }
 }
