close #376 fix tag filter

--- a/_layouts/anything.html
+++ b/_layouts/anything.html
@@ -3,5 +3,27 @@ layout: page
 ---
 
 <div class="posts-container">
-    {{ content }}
+    <div class="wrapper">
+        {% for post in site.posts %}
+        <div class="story-card">
+          <a href="{{ post.url }}">
+            <div class="card-img-top" style="background-image: url('{{ post.image }}')"></div>
+          </a>
+          <div class="card-body">
+            <div class="posts-tags">
+              {% for tag in post.tags %}
+              <div class="blog-tag-item" style="display: inline-block" >
+                <span class="tags">{{ tag }}</span>
+              </div>
+              {% endfor %}
+            </div>
+            <a href="{{ post.url }}">
+              <h5>{{ post.title }}</h5>
+            </a>
+            <p class="author-text"><span class="date-span">{{ post.date | date: "%B %d, %Y" }}</span></p>
+            <p class="card-text">{{ post.description }}</p>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
 </div>
