--- a/_sass/pages/_anything.scss
+++ b/_sass/pages/_anything.scss
@@ -149,6 +149,42 @@
     background-repeat: no-repeat;
 }
 
+@media only screen and (max-width: 1500px) {
+
+    .posts-container {
+
+        .wrapper {
+            grid-template-columns: 1fr 1fr 1fr;
+        }
+
+        .events-image {
+            height: 30vh;
+        }
+
+
+    }
+
+   
+}
+
+@media only screen and (max-width: 1200px) {
+
+    .posts-container {
+
+        .wrapper {
+            grid-template-columns: 1fr 1fr;
+        }
+
+        .events-image {
+            height: 30vh;
+        }
+
+
+    }
+
+   
+}
+
 /* Small devices (phones, 768px and down) */
 
 @media only screen and (max-width: 768px) {
