--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -8,7 +8,7 @@ layout: page
         {% for event in site.events %}
 <a href="{{ event.url }}">
         <div class="events-boks">
-<img class="events-image" src="{{ event.image }}" alt="{{ event.title }}">
+<img class="events-image {{ event.image-position }}" src="{{ event.image }}" alt="{{ event.title }}">
 <h3 class="events-date">{{ event.date | date: "%d %B %Y" }}</h3>
 
 <h2 class="events-heading">
