--- a/_sass/pages/_events.scss
+++ b/_sass/pages/_events.scss
@@ -17,6 +17,13 @@
         background-position: center;
         background-repeat: no-repeat;
     }
+    .events-image.bottom {
+        object-position: bottom;
+    }
+
+    .events-image.top {
+        object-position: top;
+    }
 
     h2 {
         font-size: 3.5vh;
