--- a/_layouts/anything-post.html
+++ b/_layouts/anything-post.html
@@ -15,7 +15,7 @@ layout: page
     <h1>While we have your attention</h1>
     <p>Sign up to our Profeed and receive news and information about our latest events, or if you can't wait, sign up for our event right away!</p>
     <span>
-        <a id="ga-mailchimp-from-{{ page.title }}" class="mailchimp" href="/profeed-signup/" data-proofer-ignore><i class="far fa-envelope"></i>Profeed</a>
+        <a id="ga-mailchimp-from-{{ page.title }}" class="mailchimp" href="/profeed/" data-proofer-ignore><i class="far fa-envelope"></i>Profeed</a>
         <a id="ga-eventbrite-from-{{ page.title }}" class="eventbrite" href="/events/" data-proofer-ignore><i class="far fa-calendar-alt"></i>Events</a>
     </span>
 </section>
