--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -16,57 +16,33 @@ layout: page
     <div class="wrapper">
 
         <div class="event-boks">
-           
 
-           
-<img class="event-image {{ page.image-position }}" src="{{ page.image }}" alt="{{ page.title }}">
 
-    <h3><i class="far fa-calendar-alt event-icon"></i> {{ page.date  | date: '%d %B %Y' }}</h3>
-    <h4><i class="far fa-clock"></i> {{ page.time }}  <i class="fas fa-map-marker-alt"></i> {{ page.place }}</h4>
-    
 
-<h2 class="event-heading">{% if posttime < nowunix %}Past: {% endif %}{{ page.title }}</h2>
+            <img class="event-image {{ page.image-position }}" src="{{ page.image }}" alt="{{ page.title }}">
 
-{{ page.content }}
+            <h3><i class="far fa-calendar-alt event-icon"></i> {{ page.date  | date: '%d %B %Y' }}</h3>
+            <h4><i class="far fa-clock"></i> {{ page.time }} <i class="fas fa-map-marker-alt"></i> {{ page.place }}</h4>
+
+
+            <h2 class="event-heading">{% if posttime < nowunix %}Past: {% endif %}{{ page.title }}</h2>
+
+            {{ page.content }}
 
         </div>
 
         <span class="event-id" style="display: none;">{{ page.event-id }}</span>
 
 
-      {% if posttime > nowunix %}
-      <h3 class="event-heading">Buy a ticket</h3>
+        {% if posttime > nowunix %}
+        <h3 class="event-heading">Buy a ticket</h3>
 
-      <iframe src="https://www.eventbrite.co.uk/tickets-external?eid={{ page.event-id }}&ref=etckt" frameborder="0" border="none" height="300" width="100%" height="100%" vspace="0" hspace="0" marginheight="0" marginwidth="0" scrolling="yes" allowtransparency="true"></iframe>
+        <iframe onload="resizeIframe(this)" src="https://www.eventbrite.co.uk/tickets-external?eid={{ page.event-id }}&ref=etckt" frameborder="0"
+             width="100%" scrolling="no" vspace="0" hspace="0" marginheight="0" marginwidth="0"
+ allowtransparency="true"></iframe>
 
-      {% endif %}
-        <!-- <div class="event-frame" id="eventbrite-widget-container-{{ page.event-id }}"></div> -->
+        {% endif %}
+
     </div>
 </div>
 
-
-
-<!-- <script src="https://www.eventbrite.com/static/widgets/eb_widgets.js"></script>
-
-
-<script type="text/javascript">
-
-var eventID = document.querySelector(".event-id").innerHTML;
-
-    var exampleCallback = function() {
-        console.log('Order complete!');
-    };
-
-    window.EBWidgets.createWidget({
-        // Required
-        widgetType: 'checkout',
-        eventId: eventID,
-        iframeContainerId: 'eventbrite-widget-container-' + eventID,
-
-        // Optional
-        iframeContainerHeight: 425,  // Widget height in pixels. Defaults to a minimum of 425px if not provided
-        onOrderComplete: exampleCallback  // Method called when an order has successfully completed
-    });
-</script>
-
- -->
