--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -3,33 +3,35 @@ layout: page
 ---
 
 <div class="events-container">
-    <div class="wrapper">
+  <div class="wrapper">
 
-        {% for event in site.events %}
-<a href="{{ event.url }}">
-        <div class="events-boks">
-<img class="events-image {{ event.image-position }}" src="{{ event.image }}" alt="{{ event.title }}">
-<h3 class="events-date">{{ event.date | date: "%d %B %Y" }}</h3>
+    {% for event in site.events %}
+    <a href="{{ event.url }}">
+      <div class="events-boks">
+        <img class="events-image {{ event.image-position }}" src="{{ event.image }}" alt="{{ event.title }}">
+        <h3 class="events-date">{{ event.date | date: "%d %B %Y" }}</h3>
 
-<h2 class="events-heading">
-    {% capture nowunix %}
-  {{ 'now' | date: '%s' | plus: 0 }}
-{% endcapture %}
-{% capture posttime %}
-  {{ event.date | date: '%s' | plus: 86400 }}
-{% endcapture %}
-{% capture datepassed %}
-  {{ event.date | date: '%s' | plus: 172800 }}
-{% endcapture %}
-{% if posttime < nowunix %}
- <span>Past:</span> 
-{% endif %}
-    {{ event.title }}
-    
-</h2>
+        <h2 class="events-heading">
+          {% capture nowunix %}
+          {{ 'now' | date: '%s' | plus: 0 }}
+          {% endcapture %}
+          {% capture posttime %}
+          {{ event.date | date: '%s' | plus: 86400 }}
+          {% endcapture %}
+          {% capture datepassed %}
+          {{ event.date | date: '%s' | plus: 172800 }}
+          {% endcapture %}
+          {% if posttime < nowunix %}
+          <span>Past:</span>
+          {% endif %}
+          {{ event.title }}
 
-        </div></a>
+        </h2>
+        <p>{{ event.description }}.</p>
+        <h3>Læs mere</h3>
+      </div>
+    </a>
 
-        {% endfor %}
-    </div>
+    {% endfor %}
+  </div>
 </div>
