--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -31,16 +31,16 @@ layout: page
 
         </div>
 
+
+
         <span class="event-id" style="display: none;">{{ page.event-id }}</span>
 
 
         {% if posttime > nowunix %}
         <h3 class="event-heading">Buy a ticket</h3>
-
-        <iframe onload="resizeIframe(this)" src="https://www.eventbrite.co.uk/tickets-external?eid={{ page.event-id }}&ref=etckt" frameborder="0"
-             width="100%" scrolling="no" vspace="0" hspace="0" marginheight="0" marginwidth="0"
- allowtransparency="true"></iframe>
-
+<div class="iframe-container">
+        <iframe src="https://www.eventbrite.co.uk/tickets-external?eid={{ page.event-id }}&ref=etckt" allowfullscreen></iframe>
+</div>
         {% endif %}
 
     </div>
