--- a/_sass/miscellaneous/_event.scss
+++ b/_sass/miscellaneous/_event.scss
@@ -62,7 +62,17 @@
     
     
 
-    
+        .iframe-container iframe {
+            height: 100%;
+            width: 100%;
+          }
+           
+         
+           
+          /* 4x3 Aspect Ratio */
+          .iframe-container-4x3 {
+            padding-top: 75%;
+          }
 
     .event-frame {
         padding: 0 !important;
