close #386 fix event brite iframe

--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -40,7 +40,7 @@ layout: page
 
         <h3 class="event-heading">Buy a ticket</h3>
 
-        <iframe class="test" src="https://www.eventbrite.co.uk/tickets-external?eid={{ page.event-id }}&ref=etckt" frameborder="0"
+        <iframe class="ebframe" src="https://www.eventbrite.co.uk/tickets-external?eid={{ page.event-id }}&ref=etckt" frameborder="0"
             marginheight="0" marginwidth="0" scrolling="yes" allowtransparency="true"></iframe>
 
         <!-- <iframe src="https://www.eventbrite.co.uk/tickets-external?eid={{ page.event-id }}&ref=etckt" frameborder="0"
