--- a/_sass/miscellaneous/_event.scss
+++ b/_sass/miscellaneous/_event.scss
@@ -108,7 +108,7 @@
 
     }
 
-    .test {
+    .ebframe {
         margin: auto;
         justify-content: center;
         height: 310px;
@@ -119,7 +119,7 @@
 }
 
 @media only screen and (max-width: 1024px) {
-    .test {
+    .ebframe {
         margin: auto;
         justify-content: center;
         height: 320px;
@@ -143,7 +143,7 @@
         
     }
 
-    .test {
+    .ebframe {
         margin: auto;
         justify-content: center;
         height: 270px;
@@ -154,7 +154,7 @@
 }
 
 @media only screen and (max-width: 480px) {
-    .test {
+    .ebframe {
         margin: auto;
         justify-content: center;
         height: 360px;
