--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -17,7 +17,14 @@ layout: page
 
         <div class="event-boks">
 
-
+            {% assign switchlang = page.lang-id %}
+                {% for event in site.events %}
+                    {% if page.title != event.title %}
+                        {% if event.lang-id == switchlang %}
+                            <a href="{{ event.url }}" style="float: right;">{{ event.lang }}</a>
+                        {% endif %}
+                    {% endif%}
+                {% endfor %}
 
             <img class="event-image {{ page.image-position }}" src="{{ page.image }}" alt="{{ page.title }}">
 
