close #398 another round of excluding sites for seo

--- a/_includes/components/footer.html
+++ b/_includes/components/footer.html
@@ -59,7 +59,7 @@
           <div class="footer-list">
             <h1>Contact</h1>
             <a href="mailto:hey@prolike.io?Subject=Hello%20again" target="_blank">hey@prolike.io</a>
-            <a href="https://www.proff.dk/firma/prolike-ivs/aller%C3%B8d/internetdesign-og-programmering/GXD3UTI0C2C/">VAT No.: 39464101</a>
+            <a href="https://www.proff.dk/firma/prolike-ivs/aller%C3%B8d/internetdesign-og-programmering/GXD3UTI0C2C/" target="_blank" data-proofer-ignore>VAT No.: 39464101</a>
             <a href="tel:+45 20 872 530">+45 20 872 530</a>
             <a href="https://goo.gl/maps/Esji6p1mx7x">Allerød Stationsvej 4</a>
             <p>3450 Allerød</p>
