--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -21,7 +21,7 @@ layout: page
                 {% for event in site.events %}
                     {% if page.title != event.title %}
                         {% if event.lang-id == switchlang %}
-                            <a href="{{ event.url }}" style="float: right;">{{ event.lang }}</a>
+                            <a href="{{ event.url }}" style="float: right;">{{ event.lang }}</a>true
                         {% endif %}
                     {% endif%}
                 {% endfor %}
