close #409 iframe final fix

--- a/_sass/miscellaneous/_event.scss
+++ b/_sass/miscellaneous/_event.scss
@@ -20,7 +20,7 @@
     
     .resp-iframe {
 
-        height: 45vh;
+        height: 340px;
         width: 100%;
 
        
@@ -175,7 +175,7 @@
 @media only screen and (max-width: 650px) {
     .resp-iframe {
 
-        height:50vh !important;
+        height:390px !important;
         width: 100%;
     }
 
