close #413 get events back

--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -6,7 +6,7 @@ layout: page
   <div class="wrapper">
 
     {% for event in site.events %}
-    {% if event.lang == "eng" %}
+    {% if event.lang == "gb" %}
     <a href="{{ event.url }}">
       <div class="events-boks">
         <img class="events-image {{ event.image-position }}" src="{{ event.image }}" alt="{{ event.title }}">
