close #417 adjust buttons

--- a/_includes/components/buttons.html
+++ b/_includes/components/buttons.html
@@ -1,4 +1,5 @@
-<div class="ga-buttons" style="align-items: center; text-align: center;">
+<div class="ga-buttons">
+    <p>Sign up to our Profeed and receive news and information about our latest events, or if you can't wait, sign up for our event right away!</p>
     <a id="ga-mailchimp-from-{{ page.title }}" class="mailchimp" href="/profeed/" data-proofer-ignore><i class="far fa-envelope"></i>Profeed</a>
     <a id="ga-eventbrite-from-{{ page.title }}" class="eventbrite" href="/events/" data-proofer-ignore><i class="far fa-calendar-alt"></i>Events</a>
 </div>
